deployment/applications/namespaces/observability/grafana/templates/grafana.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  # annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingresks.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.demo.zebreje.uk
  rules:
    - host: "grafana.demo.zebreje.uk"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana
                port:
                  number: 80
